--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="clock"></div>
   </div>
   
-  <script src="./src/scripts/clock.js"></script>
+  <script src="./src/scripts/clock-seoul.js"></script>
   <script>
     getCurrentTime();
   </script>
