--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./src/styles/style.css">
+
+  <!-- Favicon-->
+  <link rel="shortcut icon" href="./src/meta/favicon.ico" />
+  
   <title>현재 시간 Clock</title>
 </head>
 
