--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
   <script>
     getCurrentTime();
   </script>
+
+  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/cogito-ergo-sum?ref=mzg"
+              rel="noreferrer"
+              alt="Click on it and press control-shift."
+              title="Click on it and press control-shift."
+              target="_blank">π</a></p>
 </body>
 </html>
