--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     getCurrentTime();
   </script>
 
-  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/cogito-ergo-sum?ref=mzg"
+  <p id="mozarts-ghost"><a href="https://assenfuego.com/?ref=mzg"
               rel="noreferrer"
               alt="Click on it and press control-shift."
               title="Click on it and press control-shift."
