--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <p id="mozarts-ghost"><a href="https://assenfuego.com/?ref=mzg"
               rel="noreferrer"
               alt="Click on it and press control-shift."
-              title="Click on it and press control-shift."
-              target="sandra">π</a></p>
+              title="Click on it and press control-shift.">π</a></p>
 </body>
 </html>
