UPDATED css and index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!-- Favicon-->
   <link rel="shortcut icon" href="./src/meta/favicon.ico" />
-  
-  <title>현재 시간 Clock</title>
+  <link rel="stylesheet" type="text/css" href="https://jsohndata.github.io/no-tiempo/src/styles/no-tiempo.mini.css">
+  <title>🇰🇷 현재 시간 Clock</title>
 </head>
 
 <body>
@@ -27,6 +27,8 @@
   <script>
     getCurrentTime();
   </script>
+
+  <p><a href="https://github.com/jsohndata/bluenight-in-seoul" target="_blank">See Code in GitHub</a></p>
 
   <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=4"
               rel="noreferrer"
