UPDATE git code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="main-container">
     <h1>현재 시간</h1>
     <div class="clock"></div>
-    <p><a href="https://github.com/jsohndata/bluenight-in-seoul" target="_blank">See Code in GitHub</a></p>
+    <p class="small"><a href="https://github.com/jsohndata/bluenight-in-seoul" target="_blank">See Code in GitHub</a></p>
   </div>
   
   <script src="./src/scripts/clock-seoul.js"></script>
