UPDATE mozart ghost

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     getCurrentTime();
   </script>
 
-  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=4"
+  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=seoul"
               rel="noreferrer"
               alt="Click on it and press control-shift."
               title="Click on it and press control-shift.">π</a></p>
