update mozart's ghost url

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQPXSFXB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
- 
+
   <div class="main-container">
     <h1>현재 시간</h1>
     <div class="clock"></div>
@@ -41,9 +41,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     getCurrentTime();
   </script>
 
-  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=seoul"
-              rel="noreferrer"
-              alt="Click on it and press control-shift."
-              title="Click on it and press control-shift.">π</a></p>
+  <p id="mozarts-ghost"><a href="https://mozartsghost.band/rock?on=bluenight-seoul"
+    alt="Click on it and press control-shift."
+    title="Click on it and press control-shift.">π</a></p>
 </body>
 </html>
